--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
-    "next": "15.2.2-canary.6",
+    "next": "15.2.2",
+    "random-words": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
@@ -32,7 +33,7 @@
     "@types/react-dom": "^19",
     "@types/three": "^0.174.0",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2-canary.6",
+    "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
